# add-in-word

mcp/: .env  CLAUDE.md  README.md  manifest.xml  pyproject.toml
mcp/addin/: manifest.xml  taskpane.html
mcp/src/word_mcp/: graph.py  server.py  track_changes.py
